# space_invaders

SI_Client/: CMakeLists.txt  Packets.txt  main.c
SI_Client/engine/: assets.c  assets.h  engine.c  engine.h  network.c  network.h  renderer.c  renderer.h  screen.c  screen.h
SI_Client/game/: enemy.c  enemy.h  gameobject.c  gameobject.h  player.c  player.h
SI_Client/screen/: connect.c  connect.h  field.c  field.h  game.c  game.h  gameover.c  gameover.h  main_menu.c  main_menu.h
SI_Client/util/: font.c  font.h  queue.c  queue.h  time.c  time.h
SI_Server/: .gitignore  CMakeLists.txt  Packets.txt  SI_Server.layout  main.c
SI_Server/game/: enemy.c  enemy.h  field.c  field.h  game.c  game.h  gameobject.c  gameobject.h  player.c  player.h  rectangle.c  rectangle.h
SI_Server/network/: net.c  net.h  packer.c  packer.h  packet.c  packet.h
SI_Server/util/: endian.c  endian.h  logger.h  queue.c  queue.h  time.c  time.h
